--- a/styles.css
+++ b/styles.css
@@ -30,6 +30,10 @@
     font-size: 24px;
     font-weight: bold;
   }
+
+  .logo:hover {
+    color:black;
+  }
   
   .navbar ul {
     list-style: none;
@@ -37,7 +41,13 @@
   }
   
   .navbar ul li {
-    margin-right: 20px;
+    margin-right: 25px;
+    transition: all 0.03s ease 0s;
+  }
+
+  .navbar ul li:hover {
+    font-weight:bolder;
+    transform: translateY(5px);
   }
   
   .navbar ul li a {
@@ -62,7 +72,7 @@
   .hero {
     background: url('solar-background.jpg') no-repeat center center/cover;
     height: 100vh;
-    color: white;
+    color: black;
     text-align: center;
     display: flex;
     justify-content: center;
