--- a/styles.css
+++ b/styles.css
@@ -42,11 +42,11 @@
   
   .navbar ul li {
     margin-right: 25px;
-    transition: all 0.03s ease 0s;
+    transition: all 0.1s linear 0s;
   }
 
   .navbar ul li:hover {
-    font-weight:bolder;
+    font-weight:500;
     transform: translateY(5px);
   }
   
@@ -62,10 +62,11 @@
     padding: 10px 20px;
     text-decoration: none;
     border-radius: 5px;
+    transition: all 0.3s ease-out 0s;
   }
   
   .cta-button:hover {
-    background-color: #e07b00;
+    background-color: orangered;
   }
   
   /* Hero Section */
