--- a/styles.css
+++ b/styles.css
@@ -99,6 +99,7 @@
   .container {
     width: 80%;
     margin: 0 auto;
+    text-align: center;
   }
   
   /* Why Choose Section */
@@ -121,4 +122,15 @@
     width: 60px;
     height: 60px;
     margin-bottom:
+  }
+
+  .portimg {
+    border-radius: 10px;
+  }
+
+  .border {
+    border: 10px dotted black;
+    border-bottom: 0;
+    margin: 0 auto;
+    width: 120px;
   }
