--- a/styles.css
+++ b/styles.css
@@ -129,8 +129,19 @@
   }
 
   .border {
-    border: 10px dotted black;
+    border: 10px dotted grey;
     border-bottom: 0;
     margin: 0 auto;
     width: 120px;
+  }
+
+  .footer {
+    background-color: #1a7c38;
+    color: black;
+  }
+  .footer a {
+    color: black;
+  }
+  .footer a:hover {
+    color: white;
   }
